# baeus

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/baeus-app/: Cargo.toml
crates/baeus-app/src/: app.rs  assets.rs  main.rs  settings.rs
crates/baeus-core/: Cargo.toml
crates/baeus-core/src/: auth.rs  aws_eks.rs  aws_sso.rs  client.rs  cluster.rs  crd.rs  exec.rs  informer.rs  kubeconfig.rs  lib.rs  logs.rs  metrics.rs  rbac.rs  resource.rs  runtime.rs  watch.rs
crates/baeus-editor/: Cargo.toml
crates/baeus-editor/src/: buffer.rs  diff.rs  highlight.rs  lib.rs  yaml.rs
crates/baeus-helm/: Cargo.toml
crates/baeus-helm/src/: charts.rs  lib.rs  operations.rs  releases.rs
crates/baeus-plugins/: Cargo.toml
crates/baeus-plugins/src/: api.rs  lib.rs  loader.rs  registry.rs  sandbox.rs
crates/baeus-terminal/: Cargo.toml
crates/baeus-terminal/src/: emulator.rs  lib.rs  pty.rs  pty_process.rs
crates/baeus-test-utils/: Cargo.toml
crates/baeus-test-utils/src/: fixtures.rs  lib.rs  mock_cluster.rs  ui_harness.rs
crates/baeus-ui/: Cargo.toml
crates/baeus-ui/src/: icons.rs  lib.rs  models.rs  theme.rs
crates/baeus-ui/src/components/: aws_sso_banner.rs  confirm_dialog.rs  details_panel.rs  donut_chart.rs  editor_view.rs  eks_wizard.rs  eks_wizard_actions.rs  eks_wizard_render.rs  event_detail_render.rs  json_extract.rs  loading.rs  log_viewer.rs  metrics_chart.rs  mod.rs  node_detail_render.rs  notification.rs  pod_detail.rs  pod_detail_render.rs  port_forward.rs  resource_map.rs  resource_table.rs  search_bar.rs  status_badge.rs  terminal_view.rs  terminal_view_component.rs  topology_render.rs  yaml_editor_render.rs
crates/baeus-ui/src/layout/: app_shell.rs  command_palette.rs  dock.rs  header.rs  indent_guides.rs  mod.rs  sidebar.rs  workspace.rs
crates/baeus-ui/src/views/: cluster_list.rs  crd_browser.rs  dashboard.rs  events.rs  helm_install.rs  helm_releases.rs  mod.rs  namespace_map.rs  plugin_manager.rs  port_forward.rs  preferences.rs  resource_detail.rs  resource_list.rs
crates/baeus-ui/tests/: cluster_list_tests.rs  command_palette_tests.rs  confirm_dialog_tests.rs  connection_loss_tests.rs  crd_browser_render_tests.rs  crd_discovery_tests.rs  dashboard_tests.rs  details_panel_tests.rs  dock_tests.rs  donut_chart_tests.rs  editor_apply_tests.rs  editor_diff_tests.rs  editor_keyboard_tests.rs  editor_view_render_tests.rs  error_state_tests.rs  events_render_tests.rs  exec_confirm_tests.rs  global_search_tests.rs  helm_data_loading_tests.rs  helm_install_render_tests.rs  helm_operations_tests.rs  helm_releases_render_tests.rs  indent_guide_tests.rs  json_extract_tests.rs  keyboard_nav_tests.rs  loading_tests.rs  log_download_tests.rs  log_viewer_render_tests.rs  log_viewer_tests.rs  menu_bar_tests.rs  metrics_chart_render_tests.rs  namespace_map_render_tests.rs  namespace_selector_tests.rs  navigation.rs  navigator_tests.rs  navigator_tree_tests.rs  network_resource_tests.rs  notification_tests.rs  plugin_manager_render_tests.rs  plugin_operations_tests.rs  (+21 more)
macos/: AppIcon.icns  Info.plist  build-app.sh
tests/ui/: navigation.rs  resource_table.rs
