[package]
name = "baeus-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
kube.workspace = true
kube-runtime.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
petgraph.workspace = true
base64.workspace = true
flate2.workspace = true
fuzzy-matcher.workspace = true
dirs.workspace = true
notify.workspace = true
zeroize.workspace = true
secrecy.workspace = true
ring.workspace = true
rustls.workspace = true
http = "1"
open.workspace = true
aws-config.workspace = true
aws-sdk-eks.workspace = true
aws-sdk-ssooidc.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-sts.workspace = true
aws-credential-types.workspace = true
aws-types.workspace = true
aws-smithy-runtime-api.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
