[package]
name = "baeus-editor"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-yaml.workspace = true
serde_yaml_ng.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
baeus-test-utils = { path = "../baeus-test-utils" }
