[package]
name = "baeus-helm"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
baeus-core = { path = "../baeus-core" }
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
base64.workspace = true
flate2.workspace = true

[dev-dependencies]
baeus-test-utils = { path = "../baeus-test-utils" }
