[package]
name = "baeus-terminal"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
baeus-core = { path = "../baeus-core" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
baeus-test-utils = { path = "../baeus-test-utils" }
